<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.pytorch.demo.objectdetection.MainActivity">

    <Button
        android:id="@+id/helpButton"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="#FFffffff"
        android:text="@string/help"
        android:textAllCaps="false"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mainIcon"
        android:layout_width="0dp"
        android:layout_height="157.5dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/main_icon"
        android:src="@drawable/main_icon"
        app:layout_constraintDimensionRatio="0.85:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="나도봄"
        android:textSize="70sp"
        android:textColor="#db758c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainIcon" />

    <Button
        android:id="@+id/liveButton"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#000"
        android:text="@string/live"
        android:textAllCaps="false"
        android:textColor="#ff4778"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/reportButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reportButton"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#80000000"
        android:text="@string/report"
        android:textAllCaps="false"
        android:textColor="#80ff4778"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/setButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        android:enabled="false" />

    <Button
        android:id="@+id/setButton"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/set"
        android:textAllCaps="false"
        android:background="#000000"
        android:textColor="#ff4778"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>