<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:keepScreenOn="true">

    <Button
        android:id="@+id/helpButton"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginEnd="20dp"
        android:background="#FFffffff"
        android:text="@string/help"
        android:textAllCaps="false"
        android:textSize="15dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/preview_layout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@android:color/black"
        android:fitsSystemWindows="true">

        <ViewStub
            android:id="@+id/object_detection_texture_view_stub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout="@layout/texture_view"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <org.pytorch.demo.objectdetection.ResultView
            android:id="@+id/resultView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/liveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#ff4778"
        android:textSize="40dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/reportButton"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#80000000"
        android:text="@string/report"
        android:textColor="#80ff4778"
        android:textSize="40dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/endButton"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#000"
        android:text="@string/end"
        android:textColor="#ff4778"
        android:textSize="40dp"
        android:layout_gravity="center"/>

</LinearLayout>